Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -54,3 +54,6 @@ blocks:
         - name: Code analyse
           commands:
             - flutter analyze
+promotions:
+  - name: Promotion 1
+    pipeline_file: pipeline_2.yml
